src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
  Global Styles
  
  - scroll bars
  - anchor tag apply pointer cursor
  - flex and grid apply 0 min width and height
  - 
*/

/*                         */
/* Scrollbars              */

:root {
  color-scheme: dark;
  accent-color: #000;
  --scrollbarBG: #fff3;
  --thumbBG: #c7d2fe22;
}
* {
  scrollbar-width: thin;
  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
  &::-webkit-scrollbar { width: 8px; }
  &::-webkit-scrollbar-track { background: transparent; }
  &::-webkit-scrollbar-thumb { background-color: var(--thumbBG); border-radius: 10px; }
}


/*                         */
/* Layouts                 */



/* BUTTON MAIN CSS!!!  */
@layer base {
  * {
    min-height: 0;
    min-width: 0;
  }
  *:focus-visible {
    outline: #818cf833 3px solid;
  }

  a{
    cursor: pointer;
    transition-property: all;
  }
  button, [type='button'], [type='reset'], [type='submit'] {
    font-size: 0.8rem /* 14px */;
    line-height: 1;
    font-weight: 400;
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 100ms;
    border-radius: 0.2rem;
  }
  
  form {
    & button, [type='button'], [type='reset'], [type='submit'] {
      padding-block: 0.6rem;
      padding-inline: 1rem;
      font-size: 0.8rem;
      background-color: rgb(165 180 252 / 0.2);
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 0.5rem;
    }
  }
  
  button:hover {
    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
    --tw-bg-opacity: 1;
    background-color: rgb(67 56 202 / var(--tw-bg-opacity));
  }
  button:active{
    filter: brightness(90%)
  }
  
  button:disabled, [type='button']:disabled, [type='reset']:disabled, [type='submit']:disabled {
    filter: saturate(.5) brightness(.75);
    pointer-events: none;
  }

  label {
    display: block;
    font-size: 0.7rem;
    opacity: 0.8;
    font-weight: 600;
    margin-block: 0.375rem;
    text-transform: uppercase;
    transition: all 150ms;
  }

  input,
  input[type="text"],
  input[type="password"],
  input[type="url"]
  {
    width: 100%;
    font-weight: 300;
    font-size: 0.9rem;
    display: block;
    padding: 0.5rem;
    padding-inline: 0.6rem;
    background-color: rgb(0 0 0 / 0.3);
    border-radius: 0.2rem;
  }
  input:invalid {
    outline: red;
  }

  fieldset {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    margin-block: 1rem;
  }
}

@layer utilities{
  .f-col{
    @apply flex flex-col
  }
  .f-row{
    @apply flex flex-row
  }
  .flexlist {
    @apply flex flex-col
  }
}

